# TKOM

./: CMakeLists.txt  main.cpp
documentation/: init.tex
src/: CMakeLists.txt  test.lang
src/main/: CMakeLists.txt
src/main/interpreter/: CMakeLists.txt  exceptions.hpp  interpreter.cpp  interpreter.hpp  scope.cpp  scope.hpp  variable.cpp  variable.hpp
src/main/lexer/: CMakeLists.txt  lex.yy.in  lexeme.hpp  lexer.cpp  lexer.hpp
src/main/logging/: CMakeLists.txt  logger-output.hpp  logger.cpp  logger.hpp
src/main/parser/: CMakeLists.txt  node-visitor.hpp  node.cpp  node.hpp  parser.cpp  parser.hpp
src/main/util/: CMakeLists.txt  generic-exception.hpp  output-stream-lookup-buffer.hpp  output-stream.hpp  stdin-output-stream.cpp  stdin-output-stream.hpp  string-output-stream.cpp  string-output-stream.hpp
src/tests/: CMakeLists.txt
src/tests/lexer/: CMakeLists.txt  lexer-test.cpp
src/tests/parser/: CMakeLists.txt  fake-visitor.cpp  fake-visitor.hpp  parser-test.cpp
src/tests/util/: CMakeLists.txt  output-stream-lookup-buffer-test.cpp  string-output-stream-test.cpp
