cmake_minimum_required(VERSION 3.6)

add_subdirectory(main)
add_subdirectory(tests)

set(SOURCE_FILES ${SOURCE_FILES} PARENT_SCOPE)
set(HEADER_FILES ${HEADER_FILES} PARENT_SCOPE)

set(GENERATED_FILES ${GENERATED_FILES} PARENT_SCOPE)

set(SOURCE_FILES_TEST ${SOURCE_FILES_TEST} PARENT_SCOPE)
set(HEADER_FILES_TEST ${HEADER_FILES_TEST} PARENT_SCOPE)